@@ -415,7 +415,7 @@ metersAway "METERS AWAY"
 
 map "MAP"
 baby "BABY"
-
+lead "LEAD"
 
 
 atWar "AT WAR"
@@ -702,10 +702,10 @@ pauseMessage4 "-"
 
 
 
-commandHintsA "CHAT COMMANDS:####/FAM##/DIE##/DISCONNECT##/FPS##/NET##/PING##/HAPPY##/MAD##/ANGRY##/SAD##/DEVIOUS##/JOY##/BLUSH##/HUBBA##/ILL##/YOOHOO##/HMPH##/LOVE##/OREALLY##/SHOCK"
+commandHintsA "CHAT COMMANDS:##~~##/FAM##/DIE##/DISCONNECT##/FPS##/NET##/PING####/HAPPY##/MAD##/ANGRY##/SAD##/DEVIOUS##/JOY##/BLUSH##/HUBBA##/ILL##/YOOHOO##/HMPH##/LOVE##/OREALLY##/SHOCK"
 
 
-commandHintsB "MORE COMMANDS:####I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]######NOTE:####[NAME] CAN BE##'YOU' FOR CLOSEST##PERSON, AS IN##'CURSE YOU'"
+commandHintsB "MORE COMMANDS:##~~##I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]######NOTE:##~~##[NAME] CAN BE##'YOU' FOR CLOSEST##PERSON, AS IN##'CURSE YOU'"
 
 
 
